<resources>
    <string name="app_name">Online_Rent_A_Car</string>
    <string name="text">Online Rent A Car</string>
    <string name="slogan">Aplikacioni online i makinave me qera në gjithë Kosovën</string>
    <string name="login">LOGIN</string>
    <string name="welcome">Mirësevini në aplikacionin tonë!</string>
    <string name="etUsername">Përdoruesi</string>
    <string name="etPassword">Fjalëkalimi</string>
    <string name="register_now">Përdorues i ri? Regjistrohu tani</string>
    <string name="forget_password">Keni harruar fjalëkalimin?</string>
    <string name="sign_name">Emri</string>
    <string name="sign_lastname">Mbiemri</string>
    <string name="sign_email">Email</string>
    <string name="sign_number">Numri Telefonit</string>
    <string name="btn_register">Regjistrohu</string>
    <string name="hint_emri">Shëno emrin tuaj&#8230;</string>
    <string name="hint_mbiemri">Shëno mbiemrin tuaj&#8230;</string>
    <string name="hint_email">Shëno email-in tuaj&#8230;</string>
    <string name="hint_numri">Shëno numrin tuaj&#8230;</string>
    <string name="hint_psw">Shëno fjalëkalimin tuaj&#8230;</string>
    <string name="register_to_login">Kthehuni tek Login</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="forget_psw">Forget Password</string>
    <!--Menu-->
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="logut">LogOut</string>
    <!--RegisterInfo-->
    <string name="info_register">Të dhënat e përdoruesit</string>
    <string name="fullName">Emri:</string>
    <string name="LastName">Mbiemri:</string>
    <string name="email">Email:</string>
    <string name="number">Nr.Telefonit:</string>
    <string name="fjalkalimi">Fjalëkalimi:</string>
    <string name="llogaria">Kliko Login për tu bërë pjesë e aplikacionit!</string>
     <!--Fragment_Profile-->
    <string name="info">Çfarë mundëson Aplikacioni jonë?</string>
    <string name="info_app">Aplikacioni <b>Rent A Car Online</b> eshte nje APP qe eshte zhvilluar ne <b>Android Studio</b> ne gjuhen programuese JAVA , e cila si qellim kryesor e ka informimin e nje perdoruesi rreth veturave me qera ne <b>Republiken e Kosoves</b>.Aplikacioni eshte zhvilluar ne ate menyre qe ti pershtate te gjitha paisjeve dhe ti pershtet madhesive te ndryshme te ekraneve. Aplikacioni permban nje <b>Login</b> dhe <b>Register FORM</b> paraprakisht ku nje perdorues eshte i obliguar fillimisht te regjistrohet dhe me pastaj te kycet si perdorues i aplikacionit. </string>

    <!--Per DARK DHE NIGHT MODE-->
    <string name="fjala">Aplikacioni Rent A Car Online eshte nje APP qe eshte zhvilluar ne Android Studio ne gjuhen programuese JAVA , e cila si qellim kryesor e ka informimin e nje perdoruesi rreth veturave me qera ne Republiken e Kosoves.Aplikacioni eshte zhvilluar ne ate menyre qe ti pershtate te gjitha paisjeve dhe ti pershtet madhesive te ndryshme te ekraneve.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>