<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".register_activity"
    android:orientation="vertical"
    android:background="#ccffff"
    android:gravity="center_vertical"
    android:padding="10dp">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:background="@drawable/rent_online"
        tools:ignore="ContentDescription"
        android:id="@+id/foto"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:background="@drawable/background_register"
        android:id="@+id/relView"
        android:layout_below="@id/foto">

        <TextView
            android:id="@+id/sign_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/acme"
            android:text="@string/sign_name"
            android:textColor="@color/black"
            android:textSize="20sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sign_name"
        android:id="@+id/sgn_name"
        android:hint="@string/hint_emri"
        android:importantForAutofill="no"
        android:inputType="textCapWords"
        android:imeOptions="actionNext"
        />

        <TextView
            android:id="@+id/sign_lastname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/sgn_name"
            android:fontFamily="@font/acme"
            android:textColor="@color/black"
            android:text="@string/sign_lastname"
            android:textSize="20sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sign_lastname"
        android:id="@+id/sgn_lastname"
        android:hint="@string/hint_mbiemri"
        android:importantForAutofill="no"
        android:inputType="textCapWords"
        android:imeOptions="actionNext"
        />

        <TextView
            android:id="@+id/sign_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/sgn_lastname"
            android:fontFamily="@font/acme"
            android:textColor="@color/black"
            android:text="@string/sign_email"
            android:textSize="20sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sign_email"
        android:id="@+id/sgn_email"
        android:hint="@string/hint_email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:imeOptions="actionNext"
        />

        <TextView
            android:id="@+id/sign_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/sgn_email"
            android:fontFamily="@font/acme"
            android:textColor="@color/black"
            android:text="@string/sign_number"
            android:textSize="20sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sign_number"
        android:id="@+id/sgn_number"
        android:hint="@string/hint_numri"
        android:importantForAutofill="no"
        android:inputType="number"
        android:imeOptions="actionNext"
        />

        <TextView
            android:id="@+id/sign_psw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/sgn_number"
            android:fontFamily="@font/acme"
            android:textColor="@color/black"
            android:text="@string/etPassword"
            android:textSize="20sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sign_psw"
        android:id="@+id/sgn_psw"
        android:hint="@string/hint_psw"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:imeOptions="actionNext"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple_200"
        android:textSize="20sp"
        android:fontFamily="sans-serif-condensed-medium"
        android:id="@+id/btn_register"
        android:text="@string/btn_register"
        android:layout_below="@id/sgn_psw"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        android:textStyle="bold"/>

        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_register"
            android:text="@string/register_to_login"
            android:textSize="13sp"
            android:textColor="#5b68ea"
            android:background="#00000000"/>

    </RelativeLayout>

</RelativeLayout>